--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,114 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
+/*------------------------------------------------------------------------------------------ General Styles */
+
 body {
     background-color: #F9FAFC;
 }
-
-#navbar-bg-color {
-    background-color: #98FC03;
-}
-
-.footer-color {
-    background-color: #98FC03;
-}
-
-.footer-color > p > i {
-    color: #000000;
-}
-
-.footer-info {
-    justify-content: space-between;
-}
-
-.logo {
-    font-family: Inika, sans-serif;
-    font-weight: 600;
-    font-size: 2rem;
-}
-
-.brand {
-    font-family: Lato, sans-serif;
-    font-size: 1.4rem;
-    font-weight: 100;
-    color: #000;
-}
-
-.landing-banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.50)), url(../images/bg-landing-draft.png);
-    padding: 150px;
-}
-
-.landing-banner>p {
-    padding: 0;
-    text-align: center;
-    font-size: 150%;
-    color: antiquewhite;
-}
-
-.article-list {
-    padding-top: 30px;
-}
-
-.article-section-quote {
-    padding: 50px;
-}
-
-.article-section-quote>p {
-    color: #FF44A7;
-    text-align: center;
-    padding: 70px;
-    font-size: 130%;
-}
-
-
-.add-post-content {
-    color: #fff;
-    text-align: center;
-    justify-content: space-evenly;
-    margin: 200px 0 50px 0;
-}
-
-.add-post-link-box {
-    border: 1px solid white;
-    border-radius: 2em;
-    padding: 15px;
-    line-height: 50px;
-}
-
-/*--------------------------------------------------------------- Comment styles */
-.commenter {
-    justify-content: flex-end;
-}
-.commenter-img {
-    max-width: 50px;
-    max-height: 50px;
-}
-
-/* -------------------------------------------------------------- About content */
-
-.about-content {
-    color: #FF44A7;
-}
-
-#about-img-banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.50)), url(../images/bg-landing-draft.png);
-    
-}
-
-/* ------------------------------------------------------------------- Temporarily pushing contact form lower down */
-
-#contact {
-    margin-top: 200px;
-}
-
-/*------------------------------------------------------------------------------ Profile pic */
-
-.profile-box {
-    display: flex;
-}
-
-/* -------------------------------------------------------------- Organise all this */
 
 .card-info {
     justify-content: space-between;
@@ -140,14 +37,131 @@ body {
     border-radius: 2rem;
 }
 
-.comment-box{
-    background-color: #FF44A7;
-    padding: 10px;
+/* ----------------------------------------------------------------------------------------- Button / Links */
+
+.btn-signup,
+.btn-edit {
+    background-color: #F9FAFC;
+    color: #000;
 }
 
-.comment-section {
-    justify-content: space-around;
+.btn-signup:hover,
+.btn-signup:active {
+    background-color: #fff;
+    color: #23BBBB;
 }
+
+.link {
+    color: #23BBBB;
+    text-decoration: none;
+}
+
+.link:hover,
+.link:active {
+    color: #445261;
+    text-decoration: underline;
+}
+
+.btn-like {
+    color: #E84610;
+    border: none;
+    background: transparent;
+}
+
+.btn-like:hover,
+.btn-like:active {
+    color: #E84610;
+    background: transparent;
+    border: none;
+}
+
+/*------------------------------------------------------------------------------------------ Base Template */
+
+#navbar-bg-color {
+    background-color: #98FC03;
+}
+
+.logo {
+    font-family: Inika, sans-serif;
+    font-weight: 600;
+    font-size: 2rem;
+}
+
+.brand {
+    font-family: Lato, sans-serif;
+    font-size: 1.4rem;
+    font-weight: 100;
+    color: #000;
+}
+
+.footer-color {
+    background-color: #98FC03;
+}
+
+.footer-color > p > i {
+    color: #000000;
+}
+
+.footer-info {
+    justify-content: space-between;
+}
+
+/*------------------------------------------------------------------------------------------- Home Page */
+
+.landing-banner {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.50)), url(../images/bg-landing-draft.png);
+    padding: 150px;
+}
+
+.landing-banner>p {
+    padding: 0;
+    text-align: center;
+    font-size: 150%;
+    color: antiquewhite;
+}
+
+.article-list {
+    padding-top: 30px;
+}
+
+.article-section-quote {
+    padding: 50px;
+}
+
+.article-section-quote>p {
+    color: #FF44A7;
+    text-align: center;
+    padding: 70px;
+    font-size: 130%;
+}
+
+.add-post-link-box {
+    border: 1px solid white;
+    border-radius: 2em;
+    padding: 15px;
+    line-height: 50px;
+}
+
+.next-btn {
+    border-radius: 2rem;
+    padding: 15px;
+    font-weight: 600;
+    background-color: #FF44A7;
+    border: 0;
+    margin-top: 30px;
+}
+
+.post-title {
+    margin-top: 10%;
+    margin-left: 5%;
+}
+
+.post-subtitle {
+    margin-left: 5%;
+    color: lightgray;
+}
+
+/*--------------------------------------------------------------------------------------------- Post Detail Page */
 
 .image-container {
     position: relative;
@@ -156,7 +170,6 @@ body {
 .image-flash {
     position: absolute;
     bottom: 5%;
-    
     left: -2px;
     background-color: #FF44A7;
     border-radius: 2rem;
@@ -188,8 +201,6 @@ body {
     overflow: hidden;
 }
 
-
-
 .post-link {
     text-decoration: none;
     color: #445261;
@@ -200,64 +211,24 @@ body {
     color: #203600;
 }
 
-.next-btn {
-    border-radius: 2rem;
-    padding: 15px;
-    font-weight: 600;
+/*--------------------------------------------------------------------------------------------- Comment styles */
+
+.commenter {
+    justify-content: flex-end;
+}
+.commenter-img {
+    max-width: 50px;
+    max-height: 50px;
+}
+
+.comment-box{
     background-color: #FF44A7;
-    border: 0;
-    margin-top: 30px;
+    padding: 10px;
 }
 
-.post-title {
-    margin-top: 10%;
-    margin-left: 5%;
-}
-
-.post-subtitle {
-    margin-left: 5%;
-    color: lightgray;
-}
-
-.btn-signup,
-.btn-edit {
-    background-color: #F9FAFC;
-    color: #000;
-}
-
-.btn-signup:hover,
-.btn-signup:active {
-    background-color: #fff;
-    color: #23BBBB;
-}
-
-.link {
-    color: #23BBBB;
-    text-decoration: none;
-}
-
-.link:hover,
-.link:active {
-    color: #445261;
-    text-decoration: underline;
-}
-
-.btn-like {
-    color: #E84610;
-    border: none;
-    background: transparent;
-}
-
-.btn-delete {
-    color: #fff;
-    background: #000;
-}
-
-.btn-like:hover,
-.btn-like:active {
-    color: #E84610;
-    background: transparent;
-    border: none;
+.comment-section {
+    justify-content: space-around;
+    margin-bottom: 100px;
 }
 
 .faded {
@@ -282,8 +253,54 @@ body {
     gap: 10px;
 }
 
+.btn-delete {
+    color: #fff;
+    background: #000;
+}
 
-/* ----------------------------------------------------- Media Queries */
+.add-comment {
+    max-height: 600px;
+    background-color: transparent;
+    padding: 10px;
+}
+
+/* ---------------------------------------------------------------------------------------------- About content */
+
+.about-content {
+    color: #FF44A7;
+}
+
+#about-img-banner {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.50)), url(../images/bg-landing-draft.png);
+    
+}
+
+/* Temporarily pushing contact form lower down */
+
+#contact {
+    margin-top: 200px;
+}
+
+/* ------------------------------------------------------------------------------------------------------- User Profile Page */
+
+.profile-box {
+    display: flex;
+}
+
+.profile-post-list {
+    text-align: center;
+}
+
+.add-post-content {
+    color: #fff;
+    text-align: center;
+    justify-content: space-evenly;
+    margin: 200px 0 50px 0;
+}
+
+
+
+/* ------------------------------------------------------------------------------------------------------- Media Queries */
 
 
 /* Mobile Styles */
@@ -297,4 +314,5 @@ body {
     .article-section-quote {
         padding: 5px;
     }
+
 }
