--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -4,8 +4,8 @@
 {% load crispy_forms_tags %}
 
 <!-- Profile Image Banner -->
-<section id="profile-page-banner" class="landing-banner container-fluid p-6 m-0">
-    <p class="p-0 m-0"> welcome to your very own profile page! </p>
+<section id="profile-page-banner" class="profile-landing-banner container-fluid p-6 m-0">
+    <p class="p-0 m-0 text-center text-white" > welcome to your very own profile page! </p>
 </section>
 
 
@@ -33,17 +33,18 @@
                 <div class="card-body">
                     <ul class="list-unstyled">
                         <li>
-                            username: {{ user.username }}
+                           <strong> Username: </strong> {{ user.username }}
                         </li>
                         <li>
-                            location: {{ user.profile.location }}
+                            <strong> Location: </strong> {{ user.profile.location }}
                         </li>
                         <li>
-                            bio: {{ user.profile.bio }}
+                            <strong> Bio: </strong> <div class="bio-box mt-1 p-3">
+                                 {{ user.profile.bio }} </div>
                         </li>
                     </ul>
-                    <a href="{% url 'profile-update' %}" class="btn btn-primary">Update Profile</a>
-                    <a href="{% url 'profile-delete' %}" class="btn btn-danger">Delete Profile</a>
+                    <a href="{% url 'profile-update' %}" class="btn btn-edit">Update Profile</a>
+                    <a href="{% url 'profile-delete' %}" class="btn btn-delete">Delete Profile</a>
                 </div>
             </div>
         </div>
@@ -63,7 +64,7 @@
                 <!-- Delete Button Form -->
                 <form action="{% url 'post_delete' post.slug %}" method="POST" style="display:inline;">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-danger btn-sm"
+                    <button type="submit" class="btn btn-edit btn-sm"
                         onclick="return confirm('Are you sure you want to delete this post?');">
                         Delete
                     </button>
