--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -5,19 +5,20 @@
 
 <!-- Profile Image Banner -->
 <section id="profile-page-banner" class="profile-landing-banner container-fluid p-6 m-0">
-    <p class="p-0 m-0 text-center text-white" > welcome to your very own profile page! </p>
+    <p class="p-0 m-0 text-center text-white"> welcome to your very own profile page! </p>
 </section>
 
 
 <!-- User profile information -->
-<section class="container mt-5 ">
+<section class="container mt-5">
     <div class="row ">
-        <!-- Profile Picture -->
         <div class="col-md-4">
-            <div class="card text-center mb-3">
+            <div class="text-center text-white user-card mb-3">
+                <!-- Profile Picture -->
                 <img src="{% if request.user.profile.profile_img %}{{ request.user.profile.profile_img.url }}{% else %}{% static 'feat-img-example.png' %}{% endif %}"
                     class="card-img-top rounded-circle mt-3 mx-auto" alt="Profile Picture"
                     style="width: 150px; height: 150px; object-fit: cover;">
+                <!-- Profile Info -->
                 <div class="card-body">
                     <h5 class="card-title">{{ request.user.username }}</h5>
                     <p class="card-text">{{ request.user.email }}</p>
@@ -26,36 +27,41 @@
         </div>
         <!-- User Information -->
         <div class="col-md-8">
-            <div class="card">
+            <div class="card user-info-card">
                 <div class="card-header ">
                     <h4>User Information</h4>
                 </div>
                 <div class="card-body">
                     <ul class="list-unstyled">
                         <li>
-                           <strong> Username: </strong> {{ user.username }}
+                            <strong> Username: </strong> {{ user.username }}
                         </li>
                         <li>
                             <strong> Location: </strong> {{ user.profile.location }}
                         </li>
                         <li>
-                            <strong> Bio: </strong> <div class="bio-box mt-1 p-3">
-                                 {{ user.profile.bio }} </div>
+                            <strong> Bio: </strong>
+                            <div class="bio-box mt-1 p-3">
+                                {{ user.profile.bio }} </div>
                         </li>
                     </ul>
-                    <a href="{% url 'profile-update' %}" class="btn btn-edit">Update Profile</a>
-                    <a href="{% url 'profile-delete' %}" class="btn btn-delete">Delete Profile</a>
+                    <div class="profile-btn d-flex justify-content-center">
+                        <a href="{% url 'profile-update' %}" class="btn btn-edit">Update Profile</a>
+                        <a href="{% url 'profile-delete' %}" class="btn btn-delete">Delete Profile</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
+<hr class="text-white mt-5">
+
 <!-- User post list -->
 <section id="user-post-list" class="container mt-5">
     <h4 class="text-center text-white">Your Blog Posts</h4>
     <div class="post-list text-white">
-        <ul class="list-unstyled">
+        <ul class="list-unstyled text-center">
             {% for post in user_posts %}
             <li class="my-2">
                 {% if post.slug %}
