add styles to user profile and about sections

--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -5,7 +5,7 @@
 
 <!-- Profile Image Banner -->
 <section id="profile-page-banner" class="profile-landing-banner container-fluid p-6 m-0">
-    <p class="p-0 m-0 text-center text-white"> welcome to your very own profile page! </p>
+    <p class="p-0 m-0 text-center text-white"> Your Profile </p>
 </section>
 
 
@@ -55,10 +55,9 @@
     </div>
 </section>
 
-<hr class="text-white mt-5">
 
 <!-- User post list -->
-<section id="user-post-list" class="container mt-5">
+<section id="user-post-list" class="container mt-5 profile-post-list ">
     <h4 class="text-center text-white">Your Blog Posts</h4>
     <div class="post-list text-white">
         <ul class="list-unstyled text-center">
@@ -105,7 +104,7 @@
 </section>
 
 <!-- Mobile user message -->
-<section class="row justify-content-center mt-5 d-custom-none">
+<section class="row justify-content-center mt-5 mb-5 d-custom-none">
     <div class="col-12 text-center text-white">
         <h5>Want to create your own post?</h5>
         <p>You can easily add your own posts using a computer!</p>
