--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -3,10 +3,11 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
+<section class="profile-landing-banner container-fluid p-6 m-0"></section>
 <section id="about-section">
     <div class="container mt-5 about-content ">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col text-center">
                 <!-- Title goes between these h2 tags -->
                 <h2>
                     {{ about.title }}
@@ -14,6 +15,7 @@
                 <!-- Content goes directly underneath this -->
                 {{ about.content | safe }}
             </div>
+            <!--
             <div class="col-md-4 text-center">
                 {% if "placeholder" in about.profile_image.url %}
                 <img src="{% static 'images/bg-landing-draft-small-screen.png' %}" class="img-fluid"
@@ -22,6 +24,7 @@
                 <img src="{{ about.profile_image.url }}" class="img-fluid" alt="{{ about.title }}">
                 {% endif %}
             </div>
+            -->
         </div>
         <div class="row">
             <div class="col text-right">
@@ -31,15 +34,11 @@
         </div>
 </section>
 
-<section id="about-img-banner" class="about-banner container-fluid">
-
-</section>
-
-<section class="landing-banner container-fluid"></section>
+<section class="profile-landing-banner container-fluid p-6 m-0"></section>
 
 <section id="contact" class="container my-5">
     <div class="row justify-content-center">
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6 text-white">
             <h2>Please Leave Any Feedback you might have!
                 We always want to hear from you.
             </h2>
