add about banner

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -3,7 +3,10 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-<section class="profile-landing-banner container-fluid p-6 m-0"></section>
+<section class="about-landing-banner container-fluid p-6 m-0">
+    <p class="text-center text-white">About us</p>
+</section>
+
 <section id="about-section">
     <div class="container mt-5 about-content ">
         <div class="row">
