--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -28,7 +28,7 @@
         <!-- User Information -->
         <div class="col-md-8">
             <div class="card user-info-card">
-                <div class="card-header ">
+                <div class="card-header">
                     <h4>User Information</h4>
                 </div>
                 <div class="card-body">
@@ -54,7 +54,6 @@
         </div>
     </div>
 </section>
-
 
 <!-- User post list -->
 <section id="user-post-list" class="container mt-5 profile-post-list ">
@@ -85,9 +84,11 @@
     </div>
 </section>
 
+<section class="about-landing-banner container-fluid p-6 mt-5 d-none d-custom-flex"">
+</section>
 
 <!-- Creating User Posts -->
-<section class="row justify-content-center mt-5 d-none d-custom-flex">
+<section class="row justify-content-center d-none d-custom-flex">
     <div class="col-12 col-md-6 add-post-content">
         {% if user.is_authenticated %}
         <div>
