add styles to sign up page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -359,6 +359,10 @@ button[type="submit"] {
     border: 1px solid black;
 }
 
+.btn-signup {
+    color: #fff;
+}
+
 /*-------------------------------------------------------------------------------------------------------- Profile Delete */
 
 
