--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
+    <link rel="manifest" href="{% static 'favicon/site.webmanifest' % }">
 </head>
 
 <body class="d-flex flex-column h-100 main-bg">
@@ -47,56 +47,56 @@
         <nav class="navbar navbar-expand-lg navbar-light" id="navbar-bg-color">
             <div class="container-fluid">
                 <a class="navbar-brand logo" href="{% url 'home' %}">
-                    GoodNews
+                GoodNews
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
-                                href="{% url 'home' %}">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.path == about_url %}active{% endif %}" aria-current="page"
-                                href="{% url 'about' %}">About</a>
-                        </li>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+                <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
+                    href="{% url 'home' %}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {% if request.path == about_url %}active{% endif %}" aria-current="page"
+                    href="{% url 'about' %}">About</a>
+            </li>
 
-                    </ul>
-                    {% if user.is_authenticated %}
-                    <span class="navbar-text">
-                        You are logged in as <a href="{% url 'user_profile' %}">
-                            {{ user }}
-                            <i class="fa-regular fa-user"></i>
-                        </a>
-                    </span>
-                    <ul class="list-unstyled">
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
-                                href="{% url 'account_logout' %}">Logout</a>
-                        </li>
-                    </ul>
-                    {% else %}
-                    <span class="navbar-text">
-                        you are logged out
-                    </span>
-                    <ul class="list-unstyled d-flex">
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
-                                href="{% url 'account_signup' %}">Register</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page"
-                                href="{% url 'account_login' %}">Login</a>
-                        </li>
-                    </ul>
-                    {% endif %}
+        </ul>
+        {% if user.is_authenticated %}
+        <span class="navbar-text">
+            You are logged in as <a href="{% url 'user_profile' %}" class="reg-links">
+                {{ user }}
+                <i class="fa-regular fa-user"></i>
+            </a>
+        </span>
+        <ul class="list-unstyled">
+            <li class="nav-item">
+                <a class="nav-link reg-links {% if request.path == logout_url %}active{% endif %}" aria-current="page"
+                    href="{% url 'account_logout' %}">Logout</a>
+            </li>
+        </ul>
+        {% else %}
+        <span class="navbar-text">
+            you are logged out
+        </span>
+        <ul class="list-unstyled d-flex">
+            <li class="nav-item">
+                <a class="nav-link reg-links btn {% if request.path == signup_url %}active{% endif %} "
+                    aria-current="page" href="{% url 'account_signup' %}">Register</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link reg-links {% if request.path == login_url %}active{% endif %}" aria-current="page"
+                    href="{% url 'account_login' %}">Login</a>
+            </li>
+        </ul>
+        {% endif %}
 
-                </div>
-            </div>
-        </nav>
+    </div>
+    </div>
+    </nav>
     </header>
 
     <!-- displaying Django messages -->
@@ -126,18 +126,38 @@
     <footer class="footer mt-auto py-3 footer-color">
 
         <div class="footer-info d-flex">
-            <p class="m-0 text-center text-black">Follow us:
-                <i class="fab fa-facebook-square ms-3"></i>
-                <i class="fab fa-twitter-square ms-3"></i>
-                <i class="fab fa-instagram-square ms-3"></i>
-                <i class="fab fa-youtube-square ms-3"></i>
-            </p>
-            <p>
-                Contact Information, maybe copyright ?
-            </p>
+            <a href="https://www.facebook.com" target="_blank" aria-label="facebook" class="reg-links">
+                <i class="fa-brands fa-facebook h4 m-1"></i>
+            </a>
+            <a href="https://www.threads.net" target="_blank" aria-label="threads" class="reg-links">
+                <i class="fa-brands fa-threads h4 m-1"></i>
+            </a>
+            <a href="https://www.twitter.com" target="_blank" aria-label="twitter" class="reg-links">
+                <i class="fa-brands fa-twitter h4 m-1"></i>
+            </a>
+            <a href="https://www.twitter.com" target="_blank" aria-label="twitter" class="reg-links">
+                <i class="fa-solid fa-x h4 m-1"></i>
+            </a>
+            <a href="https://www.youtube.com" target="_blank" aria-label="youtube" class="reg-links">
+                <i class="fa-brands fa-youtube h4 m-1"></i>
+            </a>
+            <a href="https://www.instagram.com" target="_blank" aria-label="youtube" class="reg-links">
+                <i class="fa-brands fa-instagram h4 m-1"></i>
+            </a>
         </div>
+
         <div class="footer-logo">
-            <p class="m-0 text-center text-black logo">GoodNews Media</p>
+            <p class="m-0 text-center logo">
+                <a class="navbar-brand reg-links logo" href="{% url 'home' %}">
+                    GoodNews
+                </a>
+            </p>
+            <hr class="text-black">
+            <p class="text-center">
+                {% block copyright %}
+                GoodNewsBlog 2024
+                {% endblock copyright %}
+            </p>
         </div>
     </footer>
 
@@ -153,6 +173,6 @@
     <script src="{% static 'django_summernote/summernote.min.js' %}"></script>
     <script src="{% static 'js/summernote-init.js' %}"></script> <!-- Your separate JS file -->
     {% endblock %}
-</body>
+    </body>
 
 </html>
