--- a/static/css/style.css
+++ b/static/css/style.css
@@ -161,8 +161,10 @@ body {
     font-weight: 600;
     background-color: #FF44A7;
     border: 0;
-    margin-top: 30px;
+    margin: 30px;
 }
+
+
 
 .post-title {
     margin-top: 10%;
