--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -53,9 +53,7 @@
         <div class="card comment-box col-8 ">
             <h3>Comments:</h3>
             <div class="card-body">
-
-                <!-- We want a for loop inside the empty control tags
-          to iterate through each comment in comments -->
+                <!-- We want a for loop inside the empty control tags to iterate through each comment in comments -->
                 {% for comment in comments %}
                 
                 {% if not comment.approved and comment.author == user %}
@@ -63,6 +61,7 @@
                     your comment needs approval
                 </p>
                 {% endif %}
+
                 <div class="p-2 comments
                 {% if not comment.approved and comment.author == user %}
                 faded
@@ -80,15 +79,14 @@
                         <p class="font-weight-bold mb-0">
                             {{ comment.author }} :
                         </p>
-                        <p class="mb-0 ms-2" style="line-height: 1.5;">
+                        <p id="comment{{ comment.id }}" class="mb-0 ms-2" style="line-height: 1.5;">
                             <!-- Adjust line-height if needed -->
                             {{ comment.body }}
                         </p>
                     </div>
-                    <div id="comment{{ comment.id }}">
+                    <div >
                         on: {{ comment.created_on }}
                     </div>
-
 
                     {% if user.is_authenticated and comment.author == user %}
                     <div class="d-flex comment-edit-btns">
