add new image to landing banner

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 
 <section class="about-landing-banner container-fluid p-6 m-0">
-    <p class="text-center text-white">About us</p>
+    <h1 class="text-center text-white ">About us</h1>
 </section>
 
 <section id="about-section">
