--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -5,7 +5,7 @@
 
 <!-- Profile Image Banner -->
 <section id="profile-page-banner" class="profile-landing-banner container-fluid p-6 m-0">
-    <p class="p-0 m-0 text-center text-white"> Your Profile </p>
+    <h1 class="p-0 m-0 text-center text-white"> Your Profile </h1>
 </section>
 
 
