--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -8,7 +8,7 @@
 <!-- Landing Banner Img -->
 <section class="landing-banner container-fluid">
     <!-- Landing Img here with a quote -->
-    <p> “I'm convinced of this: Good done anywhere is good done everywhere. For a change, start by speaking to people rather than walking by them like they're stones that don't matter. As long as you're breathing, it's never too late to do some good.”
+    <p class="text-pink"> “I'm convinced of this: Good done anywhere is good done everywhere. For a change, start by speaking to people rather than walking by them like they're stones that don't matter. As long as you're breathing, it's never too late to do some good.”
         — Dr. Maya Angelou </p>
 </section>
 
