add mobile section for landing banner

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,10 +6,15 @@
 <!-- index.html content starts here -->
 
 <!-- Landing Banner Img -->
-<section class="landing-banner container-fluid">
+<section class="landing-banner container-fluid d-none d-sm-block">
     <!-- Landing Img here with a quote -->
     <p class="text-pink"> “I'm convinced of this: Good done anywhere is good done everywhere. For a change, start by speaking to people rather than walking by them like they're stones that don't matter. As long as you're breathing, it's never too late to do some good.”
         — Dr. Maya Angelou </p>
+</section>
+
+<!-- Landing Banner Img/ Mobile-specific content -->
+<section class="landing-banner container-fluid d-block d-sm-none p-6">
+    <h2 class="text-pink text-center">Welcome to Goodnews</h2>
 </section>
 
 <div class="container article-list">
