--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -24,8 +24,8 @@
             <div class="row">
                 {% for post in post_list %}
                 <div class="col-md-6">
-                    <div class="card mb-4">
-                        <div class="card-body">
+                    <div class=" mb-4">
+                        <div class=" card-body ">
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top" src="{% static 'images/feat-img-example.png' %}"
@@ -41,9 +41,7 @@
                                 <h2 class="card-title">{{ post.title }}</h2>
                                 <p class="card-text">{{ post.excerpt }}</p>
                             </a>
-
-                            <hr />
-
+                            <br>
                             <div class="d-flex card-info">
                                 <p class="card-text text-muted h6">
                                     {{ post.created_on}}
@@ -53,8 +51,6 @@
                                     </i>
                                     {{ post.comment_count }}
                                 </div>
-
-
                             </div>
                         </div>
                     </div>
